<resources>
    <string name="loading">جاري التحميل  ...</string>
    <string name="NightMode">الوضع الليلي</string>
    <string name="yes">نعم</string>
    <string name="ok">حسنا</string>
    <string name="cancel">إلغاء</string>
    <string name="savewallpaper">هل تود حفظ هذه الصورة كخلفية لجهازك؟</string>
    <string name="leaveapp">مغادرة التطبيق</string>
    <string name="leavetextmsg">هل تريد الخروج من التطبيق ؟</string>
    <string name="title">العنوان</string>
    <string name="message">الرسالة</string>
    <string name="send">إرسال</string>
    <string name="reportHint">ملاحظة: المرجو شرح المشكل جيدا ليتم حله بأسرع وقت</string>
    <string name="wallhint">خلفيات تتجدد في كل مرة تدخل للتطبيق</string>
    <string name="ramadankareem">رمضان كريم 🌙 </string>
    <string name="hello">مرحبا !</string>
    <string name="firstalertdialogmsg">نشكرك على تحميل هذا التطبيق، لا تنس مشاركته مع الأحباب في هذا الشهر الفضيل و المبادرة إلى التلاوة و الأذكار و حسن الأعمال</string>
    <string name="manualcorr">تصحيحات يدوية :</string>
    <string name="minutes">دقائق</string>
    <string name="locationloading">جاري تحديد الموقع ...</string>
    <string name="itsprayertime">صلاة</string>
    <string name="incity">بمدينة</string>
    <string name="app_name">حصن المسلم</string>
    <string name="app_desc">التطبيق اليومي لكل مسلم</string>
    <string name="city">City</string>
    <string name="location">تحديد الموقع</string>
    <string name="madina">المدينة</string>
    <string name="fajr">الفجر</string>
    <string name="dohr">الظهر</string>
    <string name="asr">العصر</string>
    <string name="maghrib">المغرب</string>
    <string name="isha">العشاء</string>
    <string name="menu_prayertimes">أوقات الصلاة</string>
    <string name="menu_prayersettings">إعدادات الصلاة</string>
    <string name="menu_sunrise">أذكار الصباح</string>
    <string name="menu_sunset">أذكار المساء</string>
    <string name="menu_azkar">فضل الأذكار</string>
    <string name="menu_misbaha">مسبحة إلكترونية</string>
    <string name="menu_qibla">إتجاه القبلة</string>
    <string name="menu_zakat">حاسبة الزكاة</string>
    <string name="menu_wallpaper">خلفيات الهاتف</string>
    <string name="menu_widget">سطح الهاتف</string>
    <string name="menu_aboutus">إعدادات التطبيق</string>
    <string name="menu_share">شارك التطبيق</string>
    <string name="menu_set1">التطبيقات</string>
    <string name="menu_set2">الملحقات</string>
    <string name="menu_set3">الإعدادات</string>
    <string name="adkar_sabah_massaa">أذكار الصباح و المساء</string>
    <string name="salatdikr">أذكار الصلاة</string>
    <string name="salatdikrsub">أذكار بعد السلام من الصلاة المفروضة</string>
    <string name="salat1">أَسْـتَغْفِرُ الله،  أَسْـتَغْفِرُ الله،  أَسْـتَغْفِرُ الله.
اللّهُـمَّ أَنْـتَ السَّلامُ ، وَمِـنْكَ السَّلام ، تَبارَكْتَ يا ذا الجَـلالِ وَالإِكْـرام .</string>
    <string name="salat2">لا إلهَ إلاّ اللّهُ وحدَهُ لا شريكَ لهُ، لهُ المُـلْكُ ولهُ الحَمْد، وهوَ على كلّ شَيءٍ قَدير، اللّهُـمَّ لا مانِعَ لِما أَعْطَـيْت، وَلا مُعْطِـيَ لِما مَنَـعْت، وَلا يَنْفَـعُ ذا الجَـدِّ مِنْـكَ الجَـد.</string>
    <string name="salat3">لا إلهَ إلاّ اللّه وحدَهُ لا شريكَ لهُ، لهُ الملكُ ولهُ الحَمد، وهوَ على كلّ شيءٍ قدير، لا حَـوْلَ وَلا قـوَّةَ إِلاّ بِاللهِ، لا إلهَ إلاّ اللّـه، وَلا نَعْـبُـدُ إِلاّ إيّـاه، لَهُ النِّعْـمَةُ وَلَهُ الفَضْل وَلَهُ الثَّـناءُ الحَـسَن، لا إلهَ إلاّ اللّهُ مخْلِصـينَ لَـهُ الدِّينَ وَلَوْ كَـرِهَ الكـافِرون.</string>
    <string name="salat4">سُـبْحانَ اللهِ، والحَمْـدُ لله ، واللهُ أكْـبَر.</string>
    <string name="salat5">اللّهُـمَّ إِنِّـي أَسْأَلُـكَ عِلْمـاً نافِعـاً وَرِزْقـاً طَيِّـباً ، وَعَمَـلاً مُتَقَـبَّلاً.</string>
    <string name="salat6">اللَّهُمَّ أَجِرْنِي مِنْ النَّار. </string>
    <string name="salat7">اللَّهُمَّ أَعِنِّي عَلَى ذِكْرِكَ وَشُكْرِكَ وَحُسْنِ عِبَادَتِكَ.</string>
    <string name="time1e">بَعْد السّلامِ من صَلاةِ الفَجْر.</string>
    <string name="time33">ثلاثة و ثلاثون مرة</string>
    <string name="time3e">ثلاث مرات بعد صلاتي الفجر والمغرب. ومرة بعد الصلوات الأخرى.</string>
    <string name="time7e">بعد صلاة الصبح والمغرب.</string>
    <string name="adhandikr">أذكار الآذان</string>
    <string name="adhan1">يَقُولُ مِثْلَ مَا يَقُولُ الـمُؤَذِّنُ إلاَّ فِي "حَيَّ عَلَى الصَّلاةِ وَحَيَّ عَلَى الفَلاَحِ" فَيَقُولُ: "لاَ حَوْلَ وَلا قُوَّةَ إلاَّ باللَّهِ".</string>
    <string name="adhan2">"مَنْ قَال حِينَ يسْمعُ المُؤذِّنَ : أَشْهَد أَنْ لا إِله إِلاَّ اللَّه وحْدهُ لا شَريك لهُ ، وَأَنَّ مُحمَّداً عبْدُهُ وَرسُولُهُ ، رضِيتُ بِاللَّهِ ربًّا ، وبمُحَمَّدٍ رَسُولاً ، وبالإِسْلامِ دِينًا ، غُفِر لَهُ ذَنْبُهُ". رواه مسلم . </string>
    <string name="adhan3">"إِذا سمِعْتُمُ النِّداءَ فَقُولُوا مِثْلَ ما يَقُولُ ، ثُمَّ صَلُّوا علَيَّ ، فَإِنَّهُ مَنْ صَلَّى علَيَّ صَلاةً صَلَّى اللَّه عَلَيْهِ بِهَا عشْراً ، ثُمَّ سلُوا اللَّه لي الْوسِيلَةَ ، فَإِنَّهَا مَنزِلَةٌ في الجنَّةِ لا تَنْبَغِي إِلاَّ لعَبْدٍ منْ عِباد اللَّه وَأَرْجُو أَنْ أَكُونَ أَنَا هُو ، فَمنْ سَأَل ليَ الْوسِيلَة حَلَّتْ لَهُ الشَّفاعَةُ". رواه مسلم . </string>
    <string name="adhan4">"من قَال حِين يسْمعُ النِّداءَ : اللَّهُمَّ رَبَّ هذِهِ الدَّعوةِ التَّامَّةِ ، والصَّلاةِ الْقَائِمةِ، آت مُحَمَّداً الْوسِيلَةَ ، والْفَضَيِلَة، وابْعثْهُ مقَامًا محْمُوداً الَّذي وعَدْتَه ، حلَّتْ لَهُ شَفَاعتي يوْم الْقِيامِة" .رواه البخاري .</string>
    <string name="adhan5">اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ عَلَى سَيِّدِنَا مُحَمَّدٍ.
اللَّهُمَّ رَبَّ هَذِهِ الدَّعْوَةِ التَّامَّةِ، والصَّلاةِ القَائِمَةِ، آتِ مُـحَمَّداً الوَسِيْلَةَ والفَضِيْلَةَ، وابْعَثْهُ مَقَاماً مَـحْمُوداً الَّذِي وَعَدْتَهُ، إنَّكَ لا تُخْلِفُ الـمِيْعَادِ.</string>
    <string name="adhan6">ما بين الأذان والإقامة فالدعاء عندئذٍ مرغّب فيه ومستحب.
قَالَ رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ: "الدُّعَاءُ لَا يُرَدُّ بَيْنَ الْأَذَانِ وَالْإِقَامَةِ".
قَالَ رَسُولُ اللَّهِ صَلَّى اللَّهُ عَلَيْهِ وَسَلَّمَ: "إِنَّ الدُّعَاءَ لَا يُرَدُّ بَيْنَ الْأَذَانِ وَالْإِقَامَةِ فَادْعُوا".</string>
    <string name="adhan1e">ما يقال عند سماع الأذان :</string>
    <string name="adhan2e">عنْ سَعْدِ بْن أَبي وقَّاصٍ رضِيَ اللَّه عنْهُ عَن النبي صَلّى اللهُ عَلَيْهِ وسَلَّم أَنَّهُ قَالَ:</string>
    <string name="adhan3e">عَنْ عبْدِ اللَّهِ بْنِ عَمرِو بْنِ العاصِ رضِيَ اللَّه عنْهُما أَنه سَمِع رسُولَ اللَّهِ صَلّى اللهُ عَلَيْهِ وسَلَّم يقُولُ :</string>
    <string name="adhan4e">عَنْ جابرٍ بن عبد الله رضَي اللَّه عنهما‏ أَنَّ رَسُولَ اللَّهِ صَلّى اللهُ عَلَيْهِ وسَلَّم قَالَ : </string>
    <string name="adhan5e">ما يقال بعد سماع الأذان :</string>
    <string name="adhan6e">ما يقال بين الأذان والإقامة :</string>
    <string name="mosquedikr">أذكار المسجد</string>
    <string name="mosque1">اللّهُـمَّ اجْعَـلْ في قَلْبـي نورا ، وَفي لِسـاني نورا، وَاجْعَـلْ في سَمْعي نورا، وَاجْعَـلْ في بَصَري نورا، وَاجْعَـلْ مِنْ خَلْفي نورا، وَمِنْ أَمامـي نورا، وَاجْعَـلْ مِنْ فَوْقـي نورا ، وَمِن تَحْتـي نورا .اللّهُـمَّ أَعْطِنـي نورا. </string>
    <string name="mosque1e">دُعَاءُ الذَّهَابِ إلَى المَسْجِدِ</string>
    <string name="mosque2">يَبْدَأُ بِرِجْلِهِ اليُمْنَى، وَيَقُولُ:
أَعوذُ باللهِ العَظيـم وَبِوَجْهِـهِ الكَرِيـم وَسُلْطـانِه القَديـم مِنَ الشّيْـطانِ الرَّجـيم، بِسْمِ اللَّهِ، وَالصَّلاةُ وَالسَّلامُ عَلَى رَسُولِ الله، اللّهُـمَّ افْتَـحْ لي أَبْوابَ رَحْمَتـِك.</string>
    <string name="mosque2e">دُعَاءُ دُخُولِ المَسْجِدِ</string>
    <string name="mosque3">يَبْدَأُ بِرِجْلِهِ الْيُسْرَى، وَيَقُولُ:
بِسْـمِ اللَّـهِ وَالصَّلاةُ وَالسَّلامُ عَلَى رَسُولِ اللَّهِ، اللَّهُمَّ إنِّي أَسْأَلُكَ مِنْ فَضْلِكَ، اللَّهُمَّ اعْصِمْنِي مِنَ الشَّيْطَانِ الرَّجِيم.</string>
    <string name="mosque3e">دُعَاءُ الخُرُوجِ مِنَ المَسْجِدِ</string>
    <string name="ablutiondikr">أذكار الوضوء</string>
    <string name="wudu1">"بِسْمِ ٱللّٰهِ". </string>
    <string name="wudu1e">الذكر قبل الوضوء</string>
    <string name="wudu2">"أشْهَدُ أن لا إله إلا الله وحْدَهُ لا شريكَ لهُ ، وأشْهَدُ أنَّ محمداً عَبدُهُ ورسُولُه".
"اللَّهُمَّ اجْعَلْني مِنَ التَّوَّابينَ واجْعَلْنِي من المُتَطَهِّرِينَ".
"سُبْحَانَكَ اللَّهُمَّ وبَحَمْدكَ أشْهدُ أنْ لا إلهَ إلا أنْتَ أَسْتَغْفِرُكَ وأتُوبُ إِلَيْكَ".</string>
    <string name="wudu2e">الذكر بعد الوضوء</string>
    <string name="fooddikr">أذكار الطعام</string>
    <string name="food1">بِسْمِ اللهِ.
فإنْ نسي في أَوَّلِهِ، فَليَقُلْ:
بِسْمِ اللَّه أَوَّلَهُ وَآخِرَهُ. </string>
    <string name="food1e">الذكر عند الطعام والشراب</string>
    <string name="food2">الْحَمْدُ للهِ الَّذِي أَطْعَمَنِي هَذَا, وَرَزَقَنِيهِ مِنْ غَيْرِ حَوْلٍ مِّنِّي وَلاَ قُوَّةٍ.
الْحَمْدُ لِلَّهِ كَثِيرًا طَيِّبًا مُبَارَكًا فِيهِ غَيْرَ مَكْفِيٍّ وَلَا مُوَدَّعٍ وَلَا مُسْتَغْنًى عَنْهُ رَبَّنَا. </string>
    <string name="food2e">الذكر عند الفراغ من الطعام والشراب</string>
    <string name="food3">كَانَ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ يَشْرَبُ فِي ثَلاَثَةِ أَنْفَاسٍ، إِذَا أَدْنَى الإِنَاءَ إِلَى فَمِهِ سَمَّى اللهَ تَعَالَى, وَإِذَا أَخَّرَهُ حَمِدَ اللهَ تَعَالَى، يَفْعَلُ ذَلِكَ ثَلاَثَ مَرَّاتٍ. </string>
    <string name="food3e">هدى النبى فى الشرب</string>
    <string name="traveldikr">أذكار السفر</string>
    <string name="notifications">التنبيهات</string>
    <string name="appversion">نسخة التطبيق</string>
    <string name="version">1.2</string>
    <string name="privacypolicy">سياسة الخصوصية</string>
    <string name="reportproblem">الإبلاغ عن مشكلة</string>
    <string name="givefeedback">تقييم التطبيق</string>
    <string name="developedby"> قدم و برمج هذا التطبيق من طرف ChoubApps في رمضان</string>
    <string name="menu_fadl1">إنَّ من أفضل الأعمال الصالحة اليسيرة التي تقرب المسلم إلى ربه جل وعلا الذكرُ.</string>
    <string name="menu_fadl2">بعض الآيات والأحاديث في فضل الذكر والدعاء والحث عليها :</string>
    <string name="zakathowto">طريقة حساب الزكاة</string>
    <string name="stepone">الخطوة الأولى :</string>
    <string name="steptwo">الخطوة الثانية :</string>
    <string name="stepthree">الخطوة الثالثة :</string>
    <string name="steponedetail">أضف قيمة المال، والعقارات والثروة التي تمتلكها لأكثر من عام مع طرح قيمة الديون التي يجب عليك سدادها والإلتزامات التي يجب دفعها</string>
    <string name="steptwodetail">تحقق مجددا من قيمة الذهب بعملتك المحلية</string>
    <string name="stepthreedetail">إضغط على زر أحسب زكاتك، سيتم الخروج بملخص يخبرك ما إذا كنت مُلزم بدفع الزكاة أم لا، إن كنت مُلزم بالدفع، ستكون القيمة الواجب دفعها للزكاة واضحة. تلك القيمة هي 2.5% من جميع ممتلكاتك.</string>
    <string name="info">معلومات :</string>
    <string name="nissabinfo"> طبقاً لقانون الشريعة، النِصاب هو الحد الأدنى الذي يمتلكه الشخص لأكثر من عام حتى يكون مُلزم بدفع الزكاة. يُمكنك حساب قيمة النِصاب من ناحية قيمة الذهب أو الفضة. بالنسبة للفضة، تكون قيمة النِصاب 21 أونصات من الفضة (653.17 جرام) أو ما يعادلها من المال. بالنسبة للذهب، تكون قيمة النِصاب 3 أونصات من الذهب (85.05 جرام) أو ما يعادلها من المال. </string>
    <string name="goldsilver">لقياس سعر الذهب أو الفضة التي تمتلكها لأكثر من عام يجب احتساب سعرها لكل 10 جرام بعملتك المحلية. يجب أن يتم إضافة كل نوع (على حسب القيراط) تمتلكه من الذهب على حده لإختلاف قيمتهم.</string>
    <string name="zakatfitr">هناك نوع أخر من الزكاة الواجبة على المسلمين هي زكاة الفطر، يطلق هذا الإسم في الإسلام على الصدقات التي توزع بالقرب من نهاية شهر رمضان. إن قيمة زكاة الفطر هي نفسها عند جميع الناس بغض النظر عن إختلاف الدخل لهم. الحد الأدنى للزكاة هو صاع واحد (حفنتان) من الطعام أو الحبوب أو الفاكهة المجففة لكل فرد من أفراد العائلة.</string>
    <string name="widgetactivation">بدخولك هذه القائمة، تكون قد فعلت لديك ميزة سطح الهاتف.</string>
    <string name="instruction1">-للإستفادة من أذكار الصباح و المساء على سطح هاتفك، عليك التوجه لقائمة widgets بهاتفك.</string>
    <string name="instruction2">-ثم تسحب widget الخاصة بتطبيق حصن المسلم على سطح هاتفك.</string>
    <string name="instruction3">-يمكنك زيادة حجمها لتستطيع قراءة جميع الأذكار بشكل جيد.</string>
    <string name="instruction4">-و في الأخير ما عليك إلا السحب للأعلى أو الأسفل لقراءة وردك اليومي .</string>
</resources>