<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="12dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:fontFamily="@font/changa_bold"
        android:text="@string/zakathowto"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@color/lightblue"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:textSize="16sp"
                android:text="@string/stepone" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/changa_light"
                android:textSize="14sp"
                android:text="@string/steponedetail"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@color/lightblue"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:textSize="16sp"
                android:text="@string/steptwo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/changa_light"
                android:textSize="14sp"
                android:text="@string/steptwodetail"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@color/lightblue"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/changa_bold"
                android:textSize="16sp"
                android:text="@string/stepthree" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/changa_light"
                android:textSize="14sp"
                android:text="@string/stepthreedetail"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="15dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:shadowColor="@color/colorPrimary"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:fontFamily="@font/changa_bold"
            android:text="@string/info"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            android:background="@color/lightblue"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/changa_light"
                android:textSize="12sp"
                android:text="@string/nissabinfo"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:background="@color/lightblue"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/changa_light"
                android:textSize="12sp"
                android:text="@string/goldsilver"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:background="@color/lightblue"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/changa_light"
                android:textSize="12sp"
                android:text="@string/zakatfitr"/>
        </LinearLayout>




    </TableLayout>
    </ScrollView>
</LinearLayout>