<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutUs">
    <TextView
        android:id="@+id/aboutustitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/changa_bold"
        android:text="@string/menu_aboutus"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textSize="24sp" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        android:padding="10dp">
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchnightmode"
            android:layout_marginLeft="7dp"
            android:onClick="SwitchedtoNightMode"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:text="@string/NightMode"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        android:padding="10dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notificationcheckbox"
            android:onClick="NotifCheckBox"
            android:layout_marginLeft="15dp"
            android:checked="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:text="@string/notifications" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:text="@string/privacypolicy" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:text="@string/givefeedback" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:text="@string/reportproblem" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/lightblue"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="18sp"
            android:layout_marginStart="15dp"
            android:textColor="@color/colorAccent"
            android:shadowColor="@color/colorPrimary"
            android:fontFamily="@font/changa_bold"
            android:shadowDx="-2"
            android:shadowDy="2"
            android:shadowRadius="1"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:text="@string/appversion" />
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/developedby"
            android:fontFamily="@font/changa_light"/>
    </TableLayout>
</ScrollView>
</LinearLayout>