<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReportProblem">
    <TextView
        android:id="@+id/aboutustitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/changa_bold"
        android:text="@string/reportproblem"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textSize="24sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:text="@string/title"/>
        <EditText
            android:id="@+id/edit_text_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:background="@color/lightblue"
            android:textSize="18sp"
            android:padding="10dp"
            android:inputType="textEmailSubject" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/changa_bold"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:text="@string/message"/>
        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:background="@color/lightblue"
            android:padding="10dp"
            android:textSize="18sp"
            android:gravity="start|top"
            android:lines="6" />
        <Button
            android:id="@+id/button_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/changa_bold"
            android:textSize="18sp"
            android:background="@color/lightblue"
            android:text="@string/send"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:fontFamily="@font/changa_light"
            android:textSize="14sp"
            android:text="@string/reportHint"/>
    </LinearLayout>
</LinearLayout>