<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FadlAdkar">
    <TextView
        android:id="@+id/fadladkartitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/changa_bold"
        android:text="@string/menu_azkar"
        android:gravity="center"
        android:layout_margin="2dp"
        android:textColor="@color/colorAccent"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="-2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:textSize="24sp" />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/fadladkartitle"
       android:layout_marginTop="2dp"
       android:layout_marginRight="5dp"
       android:layout_marginLeft="5dp"
       android:id="@+id/intro"
       android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="12sp"
        android:gravity="center"
        android:fontFamily="@font/changa_light"
        android:text="@string/menu_fadl1"/>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:textSize="14sp"
           android:gravity="center"
           android:fontFamily="@font/changa_light"
           android:textColor="@color/colorAccent"
           android:shadowColor="@color/colorPrimary"
           android:shadowDx="-2"
           android:shadowDy="2"
           android:shadowRadius="1"
           android:text="@string/menu_fadl2"/>
   </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:scrollbarSize="5dp"
        android:layout_below="@+id/intro"
        android:padding="4dp"
        android:scrollbars="vertical" />

</RelativeLayout>